--- a/serverside/package.json
+++ b/serverside/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "express": "^4.18.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
@@ -49,7 +50,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
-    "@types/node": "^16.0.0",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.6",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
