--- a/database/docker-compose.yaml
+++ b/database/docker-compose.yaml
@@ -8,12 +8,13 @@ services:
       - 5432:5432
     volumes:
       - ./docker/postgres/init.d:/docker-entrypoint-initdb.d
-      - ./docker/postgres/pgdata:/var/lib/postgresql/data
+      - postgres_volume:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
       POSTGRES_DB: postgres
+      PGDATA: /var/lib/postgresql/data/pgdata
     hostname: postgres
     restart: always
     user: root
@@ -30,3 +31,6 @@ services:
       - ./docker/pgadmin:/var/lib/pgadmin
     depends_on:
       - postgres
+
+volumes:
+  postgres_volume:
