--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
     networks:
       - backend_network
     working_dir: /app
-    command: sh -c "npm install --legacy-peer-deps && npm run start:dev"
+    command: sh -c "npm install --legacy-peer-deps && npm run start"
     # command: sh -c "tail -f /dev/null"
     ports:
       - '3001:3001'
