mod: docker-compose pgadmin_user:root

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - ./services/database/docker/pgadmin:/var/lib/pgadmin
     depends_on:
       - postgres
+    user: root
 
   frontend:
     image: node:17-alpine
