--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ version: '3'
 services:
   postgres:
     image: postgres:12.2-alpine
-    ports:
-      - 5432:5432
+    # ports:
+    #   - 5432:5432
     networks:
       - backend_network
     volumes:
@@ -64,6 +64,7 @@ services:
 
 networks:
   backend_network:
+    driver: bridge
 
 
 volumes:
