--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,11 @@ services:
       - ./services/database/docker/postgres/init.d:/docker-entrypoint-initdb.d
       - postgres_volume:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
       POSTGRES_DB: backend_db
       PGDATA: /var/lib/postgresql/data/pgdata
+    env_file:
+      - .env
     hostname: postgres
     restart: always
     user: root
@@ -28,9 +28,8 @@ services:
       - 81:80
     networks:
       - backend_network
-    environment:
-      PGADMIN_DEFAULT_EMAIL: nestjs@example.com
-      PGADMIN_DEFAULT_PASSWORD: password
+    env_file:
+      - .env
     volumes:
       - ./services/database/docker/pgadmin:/var/lib/pgadmin
     depends_on:
