--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
     working_dir: /app
     command: sh -c "npm install --legacy-peer-deps && npm run start"
     # command: sh -c "tail -f /dev/null"
+    env_file:
+      - .env
     ports:
       - '3000:3000'
 
@@ -57,6 +59,8 @@ services:
     working_dir: /app
     command: sh -c "npm install --legacy-peer-deps && npm run start"
     # command: sh -c "tail -f /dev/null"
+    env_file:
+      - .env
     ports:
       - '3001:3001'
       
